--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Qapitol QA\AppData\Local\Temp\testng-eclipse--488573908\testng-customsuite.xml</span>
+                    <span>C:\Users\Qapitol QA\AppData\Local\Temp\testng-eclipse-1995957332\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestCases.Class4" class="method navigator-link" hash-for-method="class1Method">class1Method</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="TestCases.SampleClass" class="method navigator-link" hash-for-method="sampleMethod">sampleMethod</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">TestCases.Class4</span>
+              <span class="class-name">TestCases.SampleClass</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="class1Method">
-                  </a> <!-- class1Method -->
-                  <span class="method-name">class1Method</span>
+                  <a name="sampleMethod">
+                  </a> <!-- sampleMethod -->
+                  <span class="method-name">sampleMethod</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Qapitol QA\AppData\Local\Temp\testng-eclipse--488573908\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Qapitol QA\AppData\Local\Temp\testng-eclipse-1995957332\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;TestCases.Class4&quot;&gt;
+      &lt;class name=&quot;TestCases.SampleClass&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;class1Method&quot;/&gt;
+          &lt;include name=&quot;sampleMethod&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- TestCases.Class4 --&gt;
+      &lt;/class&gt; &lt;!-- TestCases.SampleClass --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,8 +191,8 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'class1Method')
-data.setCell(0, 2, 'TestCases.Class4')
+data.setCell(0, 1, 'sampleMethod')
+data.setCell(0, 2, 'TestCases.SampleClass')
 data.setCell(0, 3, 9);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
@@ -224,9 +224,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">TestCases.Class4</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">TestCases.SampleClass</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">class1Method</span>
+                <span class="method-name">sampleMethod</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
